[gd_scene load_steps=4 format=3 uid="uid://player001"]

[ext_resource type="Script" path="res://scripts/player.gd" id="1_player"]

[sub_resource type="CircleShape2D" id="CircleShape2D_body"]
radius = 24.0

[sub_resource type="CircleShape2D" id="CircleShape2D_attack"]
radius = 80.0

[node name="Player" type="CharacterBody2D"]
collision_layer = 1
collision_mask = 2
script = ExtResource("1_player")

[node name="Sprite" type="Polygon2D" parent="."]
color = Color(0.2, 0.8, 0.3, 1)
polygon = PackedVector2Array(-24, -24, 24, -24, 24, 24, -24, 24)

[node name="DirectionIndicator" type="Polygon2D" parent="."]
color = Color(0.1, 0.6, 0.2, 1)
polygon = PackedVector2Array(20, -8, 35, 0, 20, 8)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_body")

[node name="AttackArea" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 2
monitoring = false

[node name="AttackShape" type="CollisionShape2D" parent="AttackArea"]
shape = SubResource("CircleShape2D_attack")

[node name="DashTimer" type="Timer" parent="."]
one_shot = true

[node name="DashCooldownTimer" type="Timer" parent="."]
one_shot = true

[node name="AttackCooldownTimer" type="Timer" parent="."]
one_shot = true

[node name="InvincibilityTimer" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="DashTimer" to="." method="_on_dash_timer_timeout"]
[connection signal="timeout" from="DashCooldownTimer" to="." method="_on_dash_cooldown_timer_timeout"]
[connection signal="timeout" from="AttackCooldownTimer" to="." method="_on_attack_cooldown_timer_timeout"]
[connection signal="timeout" from="InvincibilityTimer" to="." method="_on_invincibility_timer_timeout"]
